--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "drizzle-orm": "^0.29.0",
     "express": "^4.18.2",
     "jiti": "^2.5.1",
+    "maxmind": "^5.0.0",
     "open": "^10.0.2",
     "postgres": "^3.4.0",
     "ws": "^8.14.2"
