--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "better-auth-studio": "./dist/cli.js"
   },
   "scripts": {
-    "build": "tsc && npm run build:frontend",
-    "build:frontend": "cd frontend && npm run build",
+    "build": "tsc && pnpm run build:frontend",
+    "build:frontend": "cd frontend && pnpm run build",
     "dev": "tsx src/cli.ts",
     "start": "node dist/cli.js",
     "studio": "tsx src/cli.ts",
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build",
-    "frontend:dev": "cd frontend && npm run dev",
-    "frontend:build": "cd frontend && npm run build",
-    "frontend:preview": "cd frontend && npm run preview",
+    "frontend:dev": "cd frontend && pnpm run dev",
+    "frontend:build": "cd frontend && pnpm run build",
+    "frontend:preview": "cd frontend && pnpm run preview",
     "lint": "biome check . --max-diagnostics=1000",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
