--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@xyflow/react": "^12.8.5",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
@@ -37,7 +37,8 @@
     "react-router-dom": "^6.20.1",
     "recharts": "^2.8.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
