--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "dependencies": {
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@better-auth/utils": "^0.3.0",
+    "@noble/hashes": "^2.0.1",
     "@types/chokidar": "^2.1.7",
     "better-auth": "1.3.34",
     "bumpp": "^10.2.3",
