chore: tsconfig patch to include the types

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,6 +26,7 @@
       "@/*": ["./src/*"]
     }
   },
+  "types": ["react", "react-dom"],
   "include": ["src", "../docs/src/components/LineShadow.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
