--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,14 @@
     "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "dependencies": {
+    "@lexical/headless": "^0.38.2",
+    "@lexical/html": "^0.38.2",
+    "@lexical/link": "^0.38.2",
+    "@lexical/list": "^0.38.2",
+    "@lexical/react": "^0.38.2",
+    "@lexical/rich-text": "^0.38.2",
+    "@lexical/selection": "^0.38.2",
+    "@lexical/utils": "^0.38.2",
     "@number-flow/react": "^0.5.10",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -26,16 +34,19 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.85.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@xyflow/react": "^12.8.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
+    "lexical": "^0.38.2",
     "lucide-react": "^0.294.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.20.1",
+    "react-syntax-highlighter": "^15.6.6",
     "recharts": "^2.8.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
