--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-auth-studio",
-  "version": "1.0.47-beta.18",
+  "version": "1.0.47",
   "description": "Studio for Better Auth",
   "main": "dist/index.js",
   "bin": {
