--- a/examples/nextjs/drizzle/package.json
+++ b/examples/nextjs/drizzle/package.json
@@ -17,7 +17,7 @@
     "better-auth": "^1.3.34",
     "better-auth-studio": "file:../../..",
     "drizzle-orm": "^0.44.5",
-    "next": "^15.0.0",
+    "next": "15.5.7",
     "postgres": "^3.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -33,4 +33,3 @@
     "node": ">=18.0.0"
   }
 }
-
