--- a/examples/nextjs/mongodb/package.json
+++ b/examples/nextjs/mongodb/package.json
@@ -14,7 +14,7 @@
     "better-auth": "^1.3.34",
     "better-auth-studio": "file:../../..",
     "mongodb": "^6.3.0",
-    "next": "^15.0.0",
+    "next": "15.5.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -28,4 +28,3 @@
     "node": ">=18.0.0"
   }
 }
-
