chore: .env.example

--- a/examples/express/mongodb/env.example
+++ b/examples/express/mongodb/env.example
@@ -6,7 +6,10 @@ MONGODB_DB_NAME=better-auth
 
 # Better Auth Configuration
 BETTER_AUTH_URL=http://localhost:3000
-AUTH_SECRET=better-auth-secret-123456789-change-this-in-production
+AUTH_SECRET=better-auth-secret-change-this-in-production
+
+# Email Configuration (Optional)
+RESEND_API_KEY=
 
 # Social Providers (Optional)
 GITHUB_CLIENT_ID=
