--- a/examples/nextjs/mongodb/env.example
+++ b/examples/nextjs/mongodb/env.example
@@ -1,11 +1,20 @@
-MONGODB_URI="mongodb://localhost:27017"
-MONGODB_DB_NAME="better-auth"
-AUTH_SECRET="your-auth-secret-here"
-BETTER_AUTH_URL="http://localhost:3000"
+# MongoDB Connection
+MONGODB_URI=mongodb://127.0.0.1:27017
+# Or use MONGO_URI (both are supported)
+# MONGO_URI=mongodb://127.0.0.1:27017
+MONGODB_DB_NAME=better-auth
 
-# Social Providers (optional)
-GITHUB_CLIENT_ID=""
-GITHUB_CLIENT_SECRET=""
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
+# Better Auth Configuration
+BETTER_AUTH_URL=http://localhost:3000
+AUTH_SECRET=better-auth-secret-change-this-in-production
 
+# Email Configuration (Optional)
+RESEND_API_KEY=
+
+# Social Providers (Optional)
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
