--- a/examples/svelte/mongodb/env.example
+++ b/examples/svelte/mongodb/env.example
@@ -1,8 +1,11 @@
-# Database Configuration
-DATABASE_URL=file:./better-auth.db
+# MongoDB Connection
+MONGODB_URI=mongodb://127.0.0.1:27017
+# Or use MONGO_URI (both are supported)
+# MONGO_URI=mongodb://127.0.0.1:27017
+MONGODB_DB_NAME=better-auth
 
 # Better Auth Configuration
-BETTER_AUTH_URL=http://localhost:3000
+BETTER_AUTH_URL=http://localhost:5173
 AUTH_SECRET=better-auth-secret-change-this-in-production
 
 # Email Configuration (Optional)
@@ -15,3 +18,4 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+
