--- a/examples/nextjs/prisma/env.example
+++ b/examples/nextjs/prisma/env.example
@@ -1,10 +1,17 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/mydb?schema=public"
-AUTH_SECRET="your-auth-secret-here"
-BETTER_AUTH_URL="http://localhost:3000"
+# Database Configuration
+DATABASE_URL=file:./better-auth.db
 
-# Social Providers (optional)
-GITHUB_CLIENT_ID=""
-GITHUB_CLIENT_SECRET=""
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
+# Better Auth Configuration
+BETTER_AUTH_URL=http://localhost:3000
+AUTH_SECRET=better-auth-secret-change-this-in-production
 
+# Email Configuration (Optional)
+RESEND_API_KEY=
+
+# Social Providers (Optional)
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
