chore: release v1.0.67-beta.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-auth-studio",
-  "version": "1.0.66",
+  "version": "1.0.67-beta.1",
   "description": "Studio for Better Auth",
   "main": "dist/index.js",
   "bin": {
