ci: sec insights

--- a/docs/package.json
+++ b/docs/package.json
@@ -15,11 +15,12 @@
     "@react-three/postprocessing": "^3.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.5.0",
+    "better-auth": "^1.4.5",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
-    "next": "15.5.8",
+    "next": "^15.5.9",
     "postprocessing": "^6.37.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
