--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "tsc && pnpm run frontend:build && pnpm run copy:public && pnpm run verify:public",
     "copy:public": "cp -r public dist/",
     "verify:public": "test -f dist/public/index.html && echo '✓ Public directory copied successfully' || (echo '✗ ERROR: Public directory not copied!' && exit 1)",
+    "postinstall": "node scripts/postinstall.js",
     "dev": "tsx src/cli.ts",
     "start": "node dist/cli.js",
     "studio": "tsx src/cli.ts",
@@ -93,6 +94,7 @@
     "dist/",
     "public/",
     "data/",
+    "scripts/",
     "README.md"
   ]
 }
