--- a/package.json
+++ b/package.json
@@ -82,13 +82,18 @@
     "@types/node": "^20.10.0",
     "@types/supertest": "^6.0.2",
     "@types/ws": "^8.5.10",
-    "supertest": "^6.3.3",
+    "supertest": "^7.1.4",
     "tsx": "^4.6.0",
     "typescript": "^5.3.2",
     "vitest": "^1.6.1"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "qs": ">=6.14.1"
+    }
   },
   "files": [
     "dist/",
