--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-auth-studio",
-  "version": "1.1.0",
+  "version": "1.1.1-beta.1",
   "description": "Studio for Better Auth",
   "main": "dist/index.js",
   "type": "module",
