--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "dotenv": "^16.3.1",
     "elysia": "^1.4.19",
     "express": "^4.18.2",
-    "hono": "^4.11.3",
+    "hono": "^4.11.4",
     "jiti": "^2.5.1",
     "maxmind": "^5.0.0",
     "open": "^10.0.2",
@@ -97,7 +97,10 @@
   },
   "pnpm": {
     "overrides": {
-      "qs": ">=6.14.1"
+      "qs": ">=6.14.1",
+      "@remix-run/router": ">=1.23.2",
+      "devalue": ">=5.6.2",
+      "@sveltejs/kit": ">=2.49.5"
     }
   },
   "files": [
