--- a/package.json
+++ b/package.json
@@ -108,7 +108,8 @@
       "qs": ">=6.14.1",
       "@remix-run/router": ">=1.23.2",
       "devalue": ">=5.6.2",
-      "@sveltejs/kit": ">=2.49.5"
+      "@sveltejs/kit": ">=2.49.5",
+      "next": ">=15.5.10"
     }
   }
 }
